components/Web4TSComponent/0.3.17.3/README.md
# 🚀 Web4TSComponent 0.3.17.3 - shCompletion Simplification & Path Authority

**Version:** 0.3.17.3  
**Status:** Production - shCompletion API & Path Authority Architecture  
**Type:** Meta-component with auto-discovery CLI  
**Purpose:** Create, manage, and enforce Web4 TypeScript component standards with automatic version promotion

## 🎯 Key Architectural Improvements in 0.3.17.3

### 1. **shCompletion Simplification** (-176 lines of bash complexity)
- **Before**: 50+ lines per source.env (getCompletionScenario + JSON + sed + complete)
- **After**: 6 lines per source.env (shCompletion with direct parameters)
- **Impact**: 4 files updated × 44 lines saved = -176 lines total
- **Benefit**: No JSON manipulation, no sed, just direct parameter passing

### 2. **Path Authority Architecture** (Zero process.cwd() violations)
- **Principle**: DefaultCLI calculates ALL paths (projectRoot, targetDirectory, componentRoot)
- **Enforcement**: DefaultWeb4TSComponent uses ONLY model state (NEVER calculates paths)
- **Tests**: Comprehensive four-cases architecture enforcement test
- **Violations**: Automatic detection of process.cwd() and path calculation methods

### 3. **Four Cases Validation** (Production + Test Isolation)
All operations work correctly in both contexts:
1. ✅ **Production `create`** → Component in projectRoot/components
2. ✅ **Test `create`** → Component in test/data/components
3. ✅ **Production `initProject`** → Files in projectRoot
4. ✅ **Test `initProject`** → Files in test/data

### 4. **Test Evidence Persistence**
- Tests clean OLD evidence (fresh start)
- Tests create components in test/data
- Tests keep evidence after run (manual inspection)
- Next run cleans and starts fresh

### 5. **Architecture Compliance Tests**
- **process.cwd() Detection**: Scans source code for violations
- **Path Calculation Detection**: Prevents Component from calculating paths
- **Model Initialization**: Requires BOTH projectRoot AND targetDirectory
- **Test Isolation**: Ensures no production contamination

---

## 🧪 Comprehensive Test Suite

### Architecture Enforcement Tests

**Test File**: `test/vitest/four-cases-architecture-enforcement.test.ts`

This critical test validates all 4 cases and catches architectural violations:

```bash
# Run the architecture enforcement test
npx vitest run test/vitest/four-cases-architecture-enforcement.test.ts
```

**Test Coverage** (7 tests):

1. **CASE 1: Production `create` - Component in projectRoot/components**
   - ✅ Creates component in projectRoot/components (NOT cwd)
   - ✅ Changes cwd to /tmp to verify path independence
   - ✅ Detects if component created in wrong location

2. **CASE 2: Test `create` - Component in test/data/components**
   - ✅ Creates component in test/data/components (test isolation)
   - ✅ Ensures NO pollution of production components/

3. **CASE 3: Production `initProject` - Files in projectRoot**
   - ✅ Creates files in projectRoot (NOT cwd)
   - ✅ Changes cwd to /tmp to verify path independence
   - ✅ Detects if files created in wrong location

4. **CASE 4: Test `initProject` - Files in test/data**
   - ✅ Creates files in test/data (test isolation)
   - ✅ Ensures proper test isolation

5. **Architecture Validation - process.cwd() Detection**
   - ✅ Scans DefaultWeb4TSComponent.ts source code
   - ✅ Detects ANY process.cwd() usage
   - ✅ Provides detailed fix instructions with PDCA references

6. **Architecture Validation - Path Calculation Detection**
   - ✅ Detects path calculation methods (calculateProjectRoot, findProjectRoot, etc.)
   - ✅ Ensures Component doesn't calculate paths (only CLI does)

7. **Model Initialization Validation**
   - ✅ Requires BOTH projectRoot AND targetDirectory
   - ✅ References systematic test table from PDCA

**If Test Fails - Clear Instructions Provided**:
```
❌ CRITICAL VIOLATION: Found process.cwd() in DefaultWeb4TSComponent.ts!

🔧 HOW TO FIX:
1. Find the process.cwd() call in DefaultWeb4TSComponent.ts
2. Replace with: this.model.projectRoot or this.model.targetDirectory
3. NEVER calculate paths in Component - use model state

Example:
❌ const projectRoot = process.cwd();
✅ const projectRoot = this.model.projectRoot;

See: @pdca 2025-11-03-UTC-1819.pdca.md (documents violation)
See: @pdca 2025-11-03-UTC-1828.pdca.md (fix pattern)
See: @pdca 2025-11-03-UTC-2000.pdca.md (lessons learned)
```

### Component Creation Tests

**Test File**: `test/vitest/idealminimalcomponent-creation-isolation.test.ts`

Tests IdealMinimalComponent creation in test isolation:

```bash
# Run IdealMinimalComponent creation test
npx vitest run test/vitest/idealminimalcomponent-creation-isolation.test.ts
```

**Test Coverage** (15 tests):

1. ✅ **Creates component in test/data** using targetDirectory
2. ✅ **Full delegation initialization** pattern validated
3. ✅ **DRY helper** for context delegation
4. ✅ **User service integration** pattern
5. ✅ **Model has delegation fields** (required for context)
6. ✅ **Constructor initializes** component identity
7. ✅ **CLI has proper** component override
8. ✅ **Component-level source.env** created correctly
9. ✅ **NOT in production** components/ directory
10. ✅ **Builds successfully** in test isolation
11. ✅ **toScenario method** exists in CLI
12. ✅ **Returns valid scenario** without hanging
13. ✅ **complete method** exists in CLI
14. ✅ **Completes without hanging** (prevents "Thinking..." freeze)
15. ✅ **Method discovery** working (99 methods discovered)

**Evidence Persistence**:
```bash
# After test run, evidence persists for inspection
ls test/data/components/IdealMinimalComponent/0.1.0.0/
# Output: dist  idealminimalcomponent  node_modules  package.json  source.env  spec  src  test  tsconfig.json  vitest.config.ts
```

### Test Isolation Compliance

**Test File**: `test/vitest/test-isolation-compliance.test.ts`

Ensures test artifacts stay in test/data:

```bash
# Run test isolation compliance checks
npx vitest run test/vitest/test-isolation-compliance.test.ts
```

**Validates**:
- ✅ NO nested components/ directories (prevents pollution)
- ✅ test/data is the ONLY test creation location
- ✅ init() requires targetDirectory (no implicit process.cwd())

### Path Authority Tests

**Test File**: `test/vitest/path-authority-architecture.test.ts`

Validates the Path Authority Principle:

```bash
# Run path authority tests
npx vitest run test/vitest/path-authority-architecture.test.ts
```

**Validates**:
- ✅ CLI is Path Authority (calculates projectRoot in init())
- ✅ CLI calculates testDataDir in init()
- ✅ Component uses model state (NO path calculations)
- ✅ Test isolation detected by model state pattern
- ✅ initProject uses model state (NOT process.cwd())
- ✅ Production vs Test Isolation determined by model state
- ✅ Environment-agnostic (Component has NO env var access)

### Running All Tests

```bash
# Run all tests
cd components/Web4TSComponent/0.3.17.3
npx vitest run

# Run specific test file
npx vitest run test/vitest/four-cases-architecture-enforcement.test.ts

# Run tests with coverage
npx vitest run --coverage
```

---

## 🎯 The Only Command You Need to Know

```bash
npm start
```

**That's it.** Seriously. The component handles its entire lifecycle automatically:

- ✅ Checks if build is needed → **builds automatically**
- ✅ Checks dependencies → **installs automatically**
- ✅ Creates symlinks → **handles automatically**
- ✅ Runs itself → **works immediately**

**Every component created by Web4TSComponent works exactly the same way.** Just `npm start` and you're done.

### What `npm start` Actually Does:

```bash
# When you run: npm start
# The component automatically:
1. Runs smart build check (only rebuilds if needed)
2. Installs dependencies if missing (with DRY-compliant symlinks)
3. Compiles TypeScript to JavaScript
4. Starts the CLI ready for commands
5. Shows help with all auto-discovered methods
```

### Quick Start Example:

```bash
cd /Users/Shared/Workspaces/temp/Web4Articles/components/Web4TSComponent/0.3.3.2

# Start the component (it handles everything automatically)
npm start

# Or use the component wrapper directly (it also auto-builds)
./web4tscomponent

# Create a new component (it will work the same way!)
./web4tscomponent create MyAwesomeComponent 0.1.0.0 all

# Test your new component (same pattern!)
cd ../../MyAwesomeComponent/0.1.0.0
npm start  # ← Same magic, fully automatic
```

---

## 💡 What is Web4TSComponent?

**Web4TSComponent** is a **TypeScript Component Standards Enforcement & Architecture Compliance tool** that serves as the foundation for all Web4 components. It's a meta-component that creates and manages other components.

### Core Capabilities:

1. **Creates versioned TypeScript components** with standardized architecture
2. **Enforces Web4 architectural principles** (empty constructors, scenario support, layered architecture)
3. **Auto-discovers CLI commands** from TypeScript methods (no manual CLI configuration)
4. **Manages automatic version promotion workflows** after successful testing
5. **Enforces DRY principle** (symlinked node_modules, no duplication)
6. **Provides comprehensive test suites** with isolated test environments
7. **Handles lifecycle automatically** (build, dependencies, execution)

### Key Features:

- ✅ **Auto-Discovery CLI** - Add methods to component, they appear in CLI automatically
- ✅ **Automatic Lifecycle** - `npm start` handles everything (build, deps, execution)
- ✅ **Project Initialization** - `initProject` bootstraps any project with Web4 standards
- ✅ **Version Management** - Semantic versioning with intelligent promotion workflow
- ✅ **DRY Compliance** - Detects and prevents node_modules duplication
- ✅ **Test Isolation** - ProjectRootMocker ensures tests don't affect production
- ✅ **Method Chaining** - Fluent API with context-aware operations
- ✅ **CMM3+ Compliance** - Objective, reproducible, automated verification
- ✅ **Self-Replicating** - Components created work the same way

---

## 🔍 Exploring Component Functionality (Discovery Workflow)

**Don't read documentation - DISCOVER what the component can do!** Web4TSComponent includes powerful discovery tools that let you explore any component's functionality, parameters, and tests interactively.

### 🎯 Quick Discovery Examples:

```bash
# What methods are available?
./web4tscomponent completion method

# What methods start with "test"?
./web4tscomponent completion method test

# What parameters does this component use?
./web4tscomponent completion parameter

# What values can the "scope" parameter have?
./web4tscomponent completion parameter scope
```

### 📚 Complete Discovery Workflow:

#### **1. Method Discovery**

**Discover all methods:**
```bash
./web4tscomponent completion method
# Shows ALL methods with full signatures:
# 1: build
# 2: create <component> <?version:'0.1.0.0'> <?options:'all'>
# 3: completion <what> <?filter:'""'>
# ... 72 methods total
```

**Search for specific methods:**
```bash
./web4tscomponent completion method create
# Shows methods starting with "create":
# 1: create <component> <?version:'0.1.0.0'> <?options:'all'>
# 2: createBasePackageJson !<identifier> !<target>
# 3: createCLIImplementation !<identifier> !<target> !<?data>
```

**Get method documentation:**
```bash
./web4tscomponent completion method initP
# Single match shows full TSDoc:
# initProject !<?targetDir:'§'>
# ────────────────────────────────────────────────────────────
# 📖 Documentation:
# Initialize or upgrade project with Web4 global configuration files
# 
# Creates root-level tsconfig.json and package.json for global node_modules
# and TypeScript extends pattern (DRY principle). Safe to run multiple times.
```

#### **2. Parameter Discovery**

**Discover all parameters:**
```bash
./web4tscomponent completion parameter
# Shows all unique parameters with Web4 notation:
# 1: <action>
# 2: <?depth:'4'>
# 3: <?options:'all'>
# 4: <?successPromotion:'nextPatch'>
# 5: <?version:'0.1.0.0'>
```

**Discover parameter values:**
```bash
./web4tscomponent completion parameter successPromotion
# Shows valid values for this parameter:
# nextPatch nextMinor nextMajor
```

#### **3. Test Discovery (Hierarchical System)**

**List all test files:**
```bash
./web4tscomponent test file
# Output:
# 📁 Available test files:
#    1:init-project-source-env.test.ts
#    2:web4tscomponent.cleanup-testpromo.test.ts
#    3:web4tscomponent.completion-discovery.test.ts
#    ...
#    19:web4tscomponent.version-promotion.test.ts
```

**List describe blocks:**
```bash
./web4tscomponent test describe
# Output:
# 📋 Available describe blocks:
# 1:  init-project-source-env.test.ts
#       a) initProject creates source.env
# 2:  web4tscomponent.cleanup-testpromo.test.ts
#       a) 🧹 Cleanup: TestPromo Pollution
# 3:  web4tscomponent.completion-discovery.test.ts
#       a) 🔍 Completion Discovery Feature Tests
#       b) 1. Method Discovery - Single Match Auto-Completion
#       c) 2. Method Discovery - Multiple Match Listing
```

**List individual test cases:**
```bash
./web4tscomponent test itCase 1a
# Output:
# 1:      init-project-source-env.test.ts
#     1a) initProject creates source.env
#            1a1) should create source.env with correct content
#            1a2) should not overwrite existing source.env
#            1a3) should make source.env executable
#            1a4) should have version number aligned with component version
#            1a5) should use BRIGHT_CYAN for "web4" in prompt
```

#### **4. Surgical Test Execution**

**Run specific test file (fast!):**
```bash
./web4tscomponent test file 3
# Runs ONLY file #3 (completion-discovery.test.ts)
# Duration: ~2s instead of 214s for full suite
```

**Run specific describe block (even faster!):**
```bash
./web4tscomponent test describe 3b
# Runs only "1. Method Discovery - Single Match Auto-Completion"
# Duration: ~500ms (400x faster than full suite!)
```

**Run single test case (surgical precision!):**
```bash
./web4tscomponent test itCase 1a1
# Runs ONLY "should create source.env with correct content"
# Duration: ~350ms (600x faster!)
# Perfect for TDD: write test → run test → fix → repeat in <1s cycles
```

#### **5. Context-Aware Discovery (Universal Tool Pattern)**

**Discover methods on ANY component:**
```bash
# Even if Web4Programmer was created from outdated template!
./web4tscomponent on Web4Programmer 0.1.0.1 completion method

# Discover parameters on ANY component:
./web4tscomponent on Web4Programmer 0.1.0.1 completion parameter

# List tests on ANY component:
./web4tscomponent on Web4Programmer 0.1.0.1 test file

# Run specific test on ANY component:
./web4tscomponent on Web4Programmer 0.1.0.1 test itCase 1a1
```

**Key Insight:** The `on` pattern brings ALL modern Web4TSComponent features to ANY component, even those created years ago with outdated templates!

### 🎯 Discovery Workflow for New Components:

When encountering a new component:

1. **Discover methods:** `./web4tscomponent completion method`
1. **Search for relevant methods:** `./web4tscomponent completion method test`
1. **Get method documentation:** `./web4tscomponent completion method initP` (single match)
1. **Discover parameters:** `./web4tscomponent completion parameter`
1. **Get parameter values:** `./web4tscomponent completion parameter scope`
1. **List test files:** `./web4tscomponent test file`
1. **Run specific test:** `./web4tscomponent test file 3`

### 🚀 Why This is Revolutionary:

**Traditional Approach:**
- Read documentation (often outdated)
- Search through code manually
- Guess at parameter values
- Run full test suite (slow)

**Web4 Discovery Approach:**
- Components document themselves
- Discover functionality interactively
- See valid values instantly
- Run surgical tests (600x faster!)

### 📊 Performance Benefits:

| Operation | Traditional | Web4 Discovery | Speedup |
|-----------|-------------|----------------|---------|
| Find method documentation | Grep README | `completion method name` | Instant |
| List test cases | Read test files | `test itCase` | 1 command |
| Run single test | Vitest with complex filter | `test itCase 1a1` | **600x** |
| Full test suite | 214s | 214s | Baseline |
| Describe block | N/A | 500ms | **400x** |
| Single test | N/A | 350ms | **600x** |

### 🎓 Key Takeaways:

- **Don't read docs first** - discover interactively
- **Single-match completion shows TSDoc** - type until one match
- **Hierarchical test system** - file → describe → itCase
- **Context-aware commands** - `on Component version command`
- **Surgical testing** - run only what you need (350ms vs 214s)
- **Universal tool pattern** - modern features on ANY component

**This is Web4's self-documenting architecture in action!** 🎯✨

---

## 🚀 Automatic Project Initialization

**You don't need to do anything!** Web4TSComponent automatically initializes your project structure on first run.

### What Happens Automatically:

1. **Creates Root `tsconfig.json`**
   - Provides base TypeScript configuration
   - All component tsconfig files `extend` from this root
   - Ensures consistent TypeScript settings across all components

2. **Creates Root `package.json`**
   - Defines global dependencies (TypeScript, Vitest, etc.)
   - Enables the DRY principle (Don't Repeat Yourself)
   - All components symlink to the global `node_modules`

3. **Creates Global `node_modules` Directory**
   - Single source of truth for all dependencies
   - Components symlink here instead of duplicating packages
   - Saves disk space and ensures version consistency

### Why This Matters (DRY Principle):

**WITHOUT initProject:**
```
❌ project/
   ├── Component1/0.1.0.0/node_modules/  (100MB)
   ├── Component2/0.1.0.0/node_modules/  (100MB)
   └── Component3/0.1.0.0/node_modules/  (100MB)
Total: 300MB of duplicated dependencies
```

**WITH initProject:**
```
✅ project/
   ├── tsconfig.json          (root config)
   ├── package.json           (root dependencies)
   ├── node_modules/          (100MB - single copy)
   ├── Component1/0.1.0.0/
   │   └── node_modules → ../../../node_modules  (symlink)
   ├── Component2/0.1.0.0/
   │   └── node_modules → ../../../node_modules  (symlink)
   └── Component3/0.1.0.0/
       └── node_modules → ../../../node_modules  (symlink)
Total: 100MB (67% space savings)
```

### When Does This Happen?

Automatic initialization triggers when you run:
- ✅ `npm start` (first time)
- ✅ `npm run build` (first time)
- ✅ `npm test` (first time)
- ✅ Any component creation

**The philosophy:** You should **never** have to manually initialize anything. Just `npm start` and everything works.

### Self-Healing Configuration

The system is **resilient** and automatically fixes corrupted configs:

- ✅ **Detects** broken or invalid JSON in `tsconfig.json` or `package.json`
- ✅ **Backs up** the corrupted file (timestamped: `*.backup.20251006-153000`)
- ✅ **Regenerates** a fresh, working configuration
- ✅ **Continues** without manual intervention

**Example:** If someone accidentally breaks `tsconfig.json`:
```bash
# Next npm start automatically:
⚠️  Detected corrupted tsconfig.json - backing up and resetting...
   Creating root tsconfig.json...
   ✅ Web4 project initialized
```

**What gets validated:**
- JSON syntax must be valid
- `tsconfig.json` must have `compilerOptions.module` (critical for ES modules)
- `package.json` must be parseable by Node.js

**What is preserved:**
- If configs are **valid but customized**, they are **NOT overwritten**
- Only **broken/corrupted** files trigger regeneration
- User customizations are safe as long as they're valid JSON

**Note:** If you really need to manually initialize (e.g., CI/CD pre-setup), you can still call:
```bash
./web4tscomponent initProject
```

---

## 🎯 How Auto-Discovery CLI Works (The Magic Explained)

### The Beautiful Simplicity:

```typescript
// When you run: ./web4tscomponent create MyComponent 0.1.0.0 all
// The CLI automatically:
// 1. Finds the 'create' method on DefaultWeb4TSComponent
// 2. Calls: component.create('MyComponent', '0.1.0.0', 'all')
// 3. That's it! No configuration needed.
```

### How Does It Know?

**Web4TSComponent has MAGIC:**
- Add a method to the component → it automatically appears in the CLI
- No CLI configuration needed
- No switch cases to update
- No hardcoded help text to maintain
- **It just works automatically!**

**Auto-Discovery Process:**
1. CLI scans `DefaultWeb4TSComponent` class using TypeScript reflection
2. Finds all public methods automatically
3. Reads TSDoc comments for parameter information
4. Generates help text from your comments
5. Routes commands to your methods automatically
6. **Zero configuration required!**

### What You'll See:

```bash
./web4tscomponent

# Output shows dozens of methods automatically:
# - create, upgrade, test, build, clean
# - on (context loading), version, list
# - And many more...
# You didn't configure ANY of them - they're discovered from TypeScript!
```

---

## 🗺️ Path Authority Principle & Path Calculations

**NEW in 0.3.17.3:** Web4TSComponent now implements the **Path Authority Principle** - a Radical OOP pattern where the CLI is the single source of truth for ALL path calculations.

### 🎯 Core Principle

**Path Authority:** The CLI calculates ALL paths ONCE in `init()`, stores them in `this.model`, and provides them to components. Components store and use these paths but NEVER calculate or discover paths themselves.

**Why This Matters:**
- ✅ **DRY Compliance:** Paths calculated once, used everywhere
- ✅ **No Functional Bloat:** No getter methods that recalculate paths
- ✅ **Test Isolation:** Test paths override production paths cleanly
- ✅ **Context Resolution:** `on()` command works with ANY component version
- ✅ **Location Resilience:** CLI finds project root from any directory

### 📁 Path Fields Reference

Web4TSComponent uses **7 critical path fields**, all calculated by the CLI:

| Field | Type | Authority | Purpose | Example |
|-------|------|-----------|---------|---------|
| `projectRoot` | string | CLI | Overall project root directory | `/Users/.../Web4Articles` |
| `componentsDir` | string | CLI | Components directory | `{projectRoot}/components` |
| `componentRoot` | string | CLI | Component's own version directory | `.../components/Web4TSComponent/0.3.17.3` |
| `scriptsDir` | string | CLI | Scripts directory | `{projectRoot}/scripts` |
| `scriptsVersionDir` | string | CLI | Versioned scripts directory | `{projectRoot}/scripts/versions` |
| `testDataDir` | string | CLI | Test isolation directory | `{componentRoot}/test/data` |
| `targetDirectory` | string | CLI | Where to create new components | `{projectRoot}` (prod) or `{testDataDir}` (test) |

### 🔍 How findProjectRoot() Works

The CLI must distinguish between the **project root** and a **component directory** (which also has `package.json`):

```typescript
// src/ts/layer2/DefaultCLI.ts - findProjectRoot()

private findProjectRoot(): string {
  // 1. Check environment variable first (from source.env)
  if (process.env.WEB4_PROJECT_ROOT) {
    return process.env.WEB4_PROJECT_ROOT;
  }

  // 2. Traverse up from cwd looking for project root
  let current = process.cwd();
  while (current !== "/") {
    // ✅ CRITICAL: Project root has ALL three:
    // - .git directory (git repository)
    // - package.json (Node.js project)
    // - components/ directory (Web4 project structure)
    if (
      existsSync(join(current, ".git")) &&
      existsSync(join(current, "package.json")) &&
      existsSync(join(current, "components"))  // ← Distinguishes from component dir
    ) {
      return current;
    }
    current = join(current, "..");
  }

  // 3. Last resort: current working directory
  return process.cwd();
}
```

**Key Innovation:** The `components/` directory check prevents the CLI from mistaking a component directory for the project root.

**Example:**
```
/Users/.../Web4Articles/                     ← ✅ Project root (has .git + package.json + components/)
├── .git/
├── package.json
├── components/
│   └── Web4TSComponent/
│       └── 0.3.17.3/                        ← ❌ NOT project root (has package.json but is inside components/)
│           ├── package.json
│           └── src/
```

### 🚀 Path Calculation in DefaultCLI.init()

All paths are calculated ONCE when the CLI initializes:

```typescript
// src/ts/layer2/DefaultCLI.ts - init()

init(scenario?: Scenario<CLIModel>): this {
  if (!scenario?.model) {
    // ✅ Path Authority: Calculate ALL paths ONCE
    const projectRoot = this.findProjectRoot();
    
    this.model = {
      uuid: crypto.randomUUID(),
      name: 'CLI',
      component: 'CLI',
      version: new SemanticVersion().init({ model: { versionString: '0.3.17.3' } }),
      origin: 'system',
      definition: 'CLI model',
      
      // ✅ ALL paths calculated here (Path Authority)
      projectRoot: projectRoot,                           // /Users/.../Web4Articles
      componentsDir: join(projectRoot, 'components'),     // {projectRoot}/components
      scriptsDir: join(projectRoot, 'scripts'),           // {projectRoot}/scripts
      scriptsVersionDir: join(projectRoot, 'scripts', 'versions'),  // {projectRoot}/scripts/versions
      testDataDir: join(projectRoot, 'test', 'data'),     // {projectRoot}/test/data
      
      // ... other model fields
    };
  }
  
  if (scenario?.model) {
    this.model = { ...this.model, ...scenario.model };
  }
  
  return this;
}
```

**Key Points:**
- Paths calculated ONCE at initialization
- Stored in `this.model` (OOP storage)
- No recalculation anywhere in the codebase
- Components receive these paths via scenario

### 🎯 How on() Command Provides Path Context

When you run `web4tscomponent on Unit 0.3.2.0 test`, the CLI loads the Unit component and provides it with ALL path context:

```typescript
// src/ts/layer2/DefaultCLI.ts - loadComponent()

private async loadComponent(
  componentName: string, 
  version: string,
  componentPath: string
): Promise<DefaultWeb4TSComponent> {
  const modulePath = join(componentPath, 'dist', 'ts', 'layer2', `Default${componentName}.js`);
  
  // ✅ Dynamic import of target component
  const module = await import(modulePath);
  const ComponentClass = module[`Default${componentName}`];
  
  // ✅ CLI is Path Authority - provide ALL paths to component
  const instance = new ComponentClass().init({
    model: {
      // Component-specific paths
      componentRoot: componentPath,                    // Component's own directory
      targetDirectory: this.model.projectRoot,         // Where to create new components
      
      // ✅ Path Authority: Transfer ALL calculated paths
      projectRoot: this.model.projectRoot,
      componentsDir: this.model.componentsDir,
      scriptsDir: this.model.scriptsDir,
      scriptsVersionDir: this.model.scriptsVersionDir,
      testDataDir: join(componentPath, 'test', 'data'),  // Component-specific test isolation
      
      // ✅ Legacy compatibility for old versions (0.3.13.2 and earlier)
      contextComponent: componentName,
      contextVersion: version,
      contextPath: componentPath,
    }
  });
  
  return instance;
}
```

**Key Innovations:**
1. **Complete Path Transfer:** ALL path fields provided to loaded component
2. **Legacy Compatibility:** Old versions (0.3.13.2) that use `getComponentContext()` still work
3. **Test Isolation:** Each component gets its own `testDataDir`
4. **Path Authority:** Component receives paths, never calculates them

### 🔄 Context Resolution in Commands

After `on()` loads a component, subsequent commands execute on that loaded component:

```typescript
// src/ts/layer2/DefaultCLI.ts - executeDynamicCommand()

protected async executeDynamicCommand(
  command: string,
  args: string[]
): Promise<boolean> {
  // ... method discovery code ...
  
  if (typeof (this as any)[command] === "function") {
    // Execute on CLI instance
    const method = (this as any)[command];
    await method.apply(this, args);
  } else {
    // ✅ OOP Context Resolution: Use loaded context if available
    // Priority: this.context (from on()) OR this.component (CLI's own component)
    const componentInstance = this.context || this.component!;
    const method = (componentInstance as any)[command];
    await method.apply(componentInstance, args);
  }
  
  return true;
}
```

**Example Flow:**
```bash
# 1. Load context
web4tscomponent on Unit 0.3.2.0

# CLI stores loaded Unit component in this.context

# 2. Run command
web4tscomponent on Unit 0.3.2.0 test

# CLI executes: this.context.test() (Unit's test method)
# Unit uses paths from its model (provided by CLI during loadComponent)
```

### 📊 Path Flow Diagram

```
┌─────────────────────────────────────────────────────────────┐
│                   PROJECT STRUCTURE                         │
│  /Users/.../Web4Articles/                                   │
│  ├── .git/                                                  │
│  ├── package.json                                           │
│  ├── components/     ← findProjectRoot() looks for this    │
│  ├── scripts/                                               │
│  └── node_modules/                                          │
└──────────────────────┬──────────────────────────────────────┘
                       │
                       ↓
┌─────────────────────────────────────────────────────────────┐
│              DEFAULT CLI INITIALIZATION                      │
│  init() {                                                    │
│    projectRoot = findProjectRoot()                          │
│    ↓                                                         │
│    componentsDir = projectRoot + '/components'              │
│    scriptsDir = projectRoot + '/scripts'                    │
│    testDataDir = projectRoot + '/test/data'                 │
│    ... all paths calculated ONCE                            │
│  }                                                           │
└──────────────────────┬──────────────────────────────────────┘
                       │
                       ↓
┌─────────────────────────────────────────────────────────────┐
│              COMPONENT LOADING (on command)                  │
│  loadComponent(componentName, version, componentPath) {     │
│    instance.init({                                           │
│      model: {                                                │
│        projectRoot: this.model.projectRoot,      ← Transfer │
│        componentsDir: this.model.componentsDir,  ← Transfer │
│        componentRoot: componentPath,              ← Specific │
│        testDataDir: componentPath + '/test/data' ← Specific │
│        ... all paths provided                               │
│      }                                                       │
│    })                                                        │
│  }                                                           │
└──────────────────────┬──────────────────────────────────────┘
                       │
                       ↓
┌─────────────────────────────────────────────────────────────┐
│                COMPONENT USES PATHS                          │
│  Component stores paths in this.model                        │
│  Component accesses via this.model.projectRoot              │
│  Component NEVER calculates paths                           │
│  Component NEVER uses process.cwd()                         │
└─────────────────────────────────────────────────────────────┘
```

### 🎯 Radical OOP Principles Applied

1. **Path Authority (#4):** CLI calculates ALL paths, components store and use them
2. **No Functional Wrappers (#8):** Direct `this.model.projectRoot` access, not `this.getProjectRoot()`
3. **No Recalculation:** Paths calculated ONCE, stored, reused
4. **Model Storage:** Paths are data in model, not methods
5. **Scenario Transfer:** Paths passed via scenario in `init()`
6. **Test Isolation:** Test paths override production paths via scenario

### ❌ Anti-Patterns (What NOT to Do)

```typescript
// ❌ WRONG: Functional wrapper that recalculates
protected getProjectRoot(): string {
  return this.findProjectRoot();  // ← Recalculating!
}

// ❌ WRONG: Using process.cwd() in component
const testDir = join(process.cwd(), 'test');  // ← process.cwd() changes with directory!

// ❌ WRONG: Path calculation in component
this.model.componentsDir = join(this.model.projectRoot, 'components');  // ← CLI's job!

// ✅ CORRECT: Direct model access
const testDir = join(this.model.componentRoot, 'test');  // ← Uses provided path

// ✅ CORRECT: Path from model
const componentsPath = this.model.componentsDir;  // ← No calculation
```

### 🧪 Test Isolation with Path Authority

Test isolation works by providing different paths via scenario:

```typescript
// Production scenario:
{
  model: {
    projectRoot: '/Users/.../Web4Articles',
    targetDirectory: '/Users/.../Web4Articles',  // Create in project root
    testDataDir: '/Users/.../Web4Articles/components/Web4TSComponent/0.3.17.3/test/data'
  }
}

// Test scenario:
{
  model: {
    projectRoot: '/Users/.../Web4Articles',  // Same project root
    targetDirectory: '/Users/.../Web4Articles/components/Web4TSComponent/0.3.17.3/test/data',  // Create in test/data!
    testDataDir: '/Users/.../Web4Articles/components/Web4TSComponent/0.3.17.3/test/data'
  }
}
```

**Result:** Components created in tests go to `test/data`, production components go to project root - all controlled by the CLI via Path Authority.

### 📚 Key Takeaways

- **CLI is Path Authority** - calculates all paths once in `init()`
- **findProjectRoot() is smart** - distinguishes project root from component directory
- **Components receive paths** - via scenario in `init()`
- **No recalculation** - paths stored in model, accessed directly
- **Context resolution** - `on()` provides complete path context to loaded components
- **Legacy compatibility** - old versions still work via `contextComponent/Version/Path` fields
- **Test isolation** - works by providing different `targetDirectory` via scenario
- **OOP storage** - paths are data in `this.model`, not calculated by methods

**This is Radical OOP: Store state, don't calculate it. Provide context, don't discover it. Use data, don't compute it.** 🎯

---

## 🎨 Tab Completion: The Most Beautiful Part

**Web4's tab completion is NOT just autocomplete. It's intelligent, context-aware, and discovers everything automatically.**

### ✨ What Makes It Beautiful

1. **Zero Configuration** - No completion scripts to write or maintain
2. **Auto-Discovery** - Finds all methods and parameters from TypeScript AST
3. **Inheritance Aware** - Follows `extends` chains automatically
4. **Context Passing** - Completions know what you've already typed
5. **Multi-Parameter Support** - Completes 1st, 2nd, 3rd... parameters intelligently
6. **Command Chaining** - Seamlessly switches between parameters and chained methods

### 🚀 The Complete Flow (How It Actually Works)

#### 1. **Method Completion** (Start typing a command)
```bash
web4tscomponent tr<Tab>
# Output: tree

web4tscomponent <Tab><Tab>
# Output: ALL methods from CLI + Component classes
# build, clean, create, links, on, tree, upgrade, verify, version...
```

**What happens:**
- Bash calls TSCompletion with: `['Web4TSComponentCLI,DefaultWeb4TSComponent', 'tr']`
- TSCompletion.getClassMethods() scans BOTH classes + inheritance chain
- Returns all methods starting with 'tr'

#### 2. **First Parameter Completion** (Method is complete, completing first arg)
```bash
web4tscomponent on <Tab><Tab>
# Output: ALL components in your project
# Build  DefaultCLI  Unit  Web4TSComponent  ...

web4tscomponent tree <Tab>
# Output: (completion callback for depth parameter)
```

**What happens:**
- Bash calls TSCompletion with: `['Web4TSComponentCLI,DefaultWeb4TSComponent', 'on', '']`
- TSCompletion checks if method 'on' exists
- Gets first parameter name: 'component'
- Checks if `componentParameterCompletion` method exists
- Returns: `__CALLBACK__:componentParameterCompletion`
- Bash calls: `web4tscomponent completeParameter componentParameterCompletion on`
- Completion method lists all directories in components/

#### 3. **Second Parameter Completion** (First param done, completing second)
```bash
web4tscomponent on Unit <Tab><Tab>
# Output: ALL versions for Unit component
# latest  prod  test  dev  0.3.2.0  0.3.0.6  0.3.0.5  ...
```

**What happens:**
- Bash calls TSCompletion with: `['Web4TSComponentCLI,DefaultWeb4TSComponent', 'on', 'Unit', '']`
- TSCompletion: args.length=4, so we're completing 2nd parameter
- paramIndex = 1 (0-based), method has 2 params: ['component', 'version']
- Gets second parameter name: 'version'
- Checks if `versionParameterCompletion` method exists
- Returns: `__CALLBACK__:versionParameterCompletion`
- Bash calls: `web4tscomponent completeParameter versionParameterCompletion on Unit`
- Completion method receives context `['on', 'Unit']`, extracts component from args[1]
- Lists all versions for that specific component

#### 4. **Chained Method Completion** (All params done, chaining next command)
```bash
web4tscomponent on Unit 0.3.2.0 <Tab><Tab>
# Output: ALL methods again (chaining!)
# build, clean, tree, verify, ...

web4tscomponent on Unit 0.3.2.0 tre<Tab>
# Output: tree
```

**What happens:**
- Bash calls TSCompletion with: `['Web4TSComponentCLI,DefaultWeb4TSComponent', 'on', 'Unit', '0.3.2.0', 'tre']`
- TSCompletion: args.length=5, method 'on' has 2 params
- paramIndex = 2, which is >= params.length (all params provided!)
- Switches to chained method completion
- Returns all methods starting with 'tre'

### 🏗️ Architecture: The Three Layers

#### **Layer 1: Bash Completion (source.env)**
```bash
# Injected by source.env when you load the environment
_web4_tscompletion() {
    local component="Web4TSComponent" cli="web4tscomponent"
    local cur="${COMP_WORDS[COMP_CWORD]}" args=("${COMP_WORDS[@]:1}")
    
    # Inject class names for TSCompletion to scan
    local className="${component}CLI,Default${component}"
    # Result: Web4TSComponentCLI,DefaultWeb4TSComponent
    
    # Call TypeScript for intelligent completion
    out=$(node --input-type=module -e "import('$tsc').then(m => 
        m.TSCompletion.start())" -- "$className" "${args[@]}")
    
    # Check if TSCompletion returned a callback
    if [[ "$out" == __CALLBACK__:* ]]; then
        local callback="${out#__CALLBACK__:}"
        # Execute the completion method with full context
        out=$($cli completeParameter "$callback" "${args[@]}")
    fi
    
    # Return results to bash
    COMPREPLY=($(compgen -W "$out" -- "$cur"))
}

# Register completion
complete -F _web4_tscompletion web4tscomponent
```

**Key Innovation:**
- `className="${component}CLI,Default${component}"` (NOT hardcoded with DefaultCLI!)
- TSCompletion automatically discovers inheritance: `Web4TSComponentCLI extends DefaultCLI`
- Context passing: `"${args[@]}"` passes ALL args to completion methods

#### **Layer 2: TSCompletion (TypeScript AST Magic)**
```typescript
// src/ts/layer4/TSCompletion.ts

static getClassMethods(className: string): string[] {
  // Support comma-separated: "Web4TSComponentCLI,DefaultWeb4TSComponent"
  if (className.includes(',')) {
    const classes = className.split(',');
    const allMethods = new Set<string>();
    classes.forEach(cls => {
      const methods = this.getClassMethods(cls.trim());
      methods.forEach(m => allMethods.add(m));
    });
    return Array.from(allMethods);
  }
  
  // Single class: Discover inheritance chain automatically!
  const files = TSCompletion.getProjectSourceFiles(); // Scans layer1-5
  const allMethods = new Set<string>();
  let baseClassName: string | null = null;
  
  for (const file of files) {
    const sourceFile = ts.createSourceFile(file, src, ts.ScriptTarget.Latest, true);
    
    ts.forEachChild(sourceFile, node => {
      if (ts.isClassDeclaration(node) && node.name?.text === className) {
        // Get methods from this class
        node.members
          .filter(m => ts.isMethodDeclaration(m))
          .forEach(m => allMethods.add((m.name as ts.Identifier).text));
        
        // 🎯 THE MAGIC: Parse extends clause!
        if (node.heritageClauses) {
          for (const clause of node.heritageClauses) {
            if (clause.token === ts.SyntaxKind.ExtendsKeyword) {
              const extendsType = clause.types[0];
              baseClassName = extendsType.expression.text; // "DefaultCLI"
            }
          }
        }
      }
    });
  }
  
  // Recursively get base class methods
  if (baseClassName) {
    const baseMethods = this.getClassMethods(baseClassName);
    baseMethods.forEach(m => allMethods.add(m));
  }
  
  return Array.from(allMethods);
}

complete(args: string[]): string[] {
  // 2 args: [className, methodPrefix] → complete method names
  if (args.length === 2) {
    const methods = TSCompletion.getClassMethods(args[0]);
    return methods.filter(m => m.startsWith(args[1]));
  }
  
  // 3 args: [className, method, param1] → complete 1st parameter
  if (args.length === 3) {
    const params = TSCompletion.getMethodParameters(args[0], args[1]);
    if (params.length > 0) {
      const completionMethod = `${params[0]}ParameterCompletion`;
      const methods = TSCompletion.getClassMethods(args[0]);
      if (methods.includes(completionMethod)) {
        return [`__CALLBACK__:${params[0]}ParameterCompletion`];
      }
    }
    return params; // Return parameter names if no completion method
  }
  
  // 4+ args: [className, method, param1, param2, ...] → complete 2nd+ parameter OR chain
  if (args.length >= 4) {
    const [className, methodName, ...providedParams] = args;
    const paramIndex = providedParams.length - 1;
    
    const params = TSCompletion.getMethodParameters(className, methodName);
    
    if (paramIndex < params.length) {
      // Still completing parameters
      const completionMethod = `${params[paramIndex]}ParameterCompletion`;
      const methods = TSCompletion.getClassMethods(className);
      if (methods.includes(completionMethod)) {
        return [`__CALLBACK__:${params[paramIndex]}ParameterCompletion`];
      }
      return [];
    } else {
      // All params done → complete chained method
      const currentWord = providedParams[providedParams.length - 1];
      const methods = TSCompletion.getClassMethods(className);
      return methods.filter(m => m.startsWith(currentWord));
    }
  }
  
  return [];
}
```

**Key Innovation:**
- Parses `extends` clause from AST using `ts.SyntaxKind.ExtendsKeyword`
- Recursively merges methods from entire inheritance chain
- Supports multi-parameter completion (2nd, 3rd, nth parameter)
- Seamlessly switches from parameter completion to method chaining

#### **Layer 3: Completion Methods (DefaultCLI & Component-Specific)**
```typescript
// src/ts/layer2/DefaultCLI.ts - Common completions for ALL components

/**
 * Tab completion for component parameter of 'on' command
 * @cliHide
 */
async componentParameterCompletion(currentArgs: string[]): Promise<string[]> {
  // Find project root
  let projectRoot = process.cwd();
  while (!existsSync(join(projectRoot, 'components'))) {
    const parent = join(projectRoot, '..');
    if (parent === projectRoot) break;
    projectRoot = parent;
  }
  
  // List all component directories
  const componentsDir = join(projectRoot, 'components');
  const entries = readdirSync(componentsDir);
  const components: string[] = [];
  
  for (const entry of entries) {
    const stats = lstatSync(join(componentsDir, entry));
    if (stats.isDirectory()) {
      components.push(entry);
    }
  }
  
  return components.sort();
}

/**
 * Tab completion for version parameter of 'on' command
 * @cliHide
 */
async versionParameterCompletion(currentArgs: string[]): Promise<string[]> {
  // 🎯 THE MAGIC: Extract component from context!
  // currentArgs: ['on', 'Unit', ...] (passed from bash)
  const componentName = currentArgs[1];
  
  if (!componentName) {
    return ['latest', 'dev', 'test', 'prod'];
  }
  
  // Find project root (same as above)
  let projectRoot = process.cwd();
  while (!existsSync(join(projectRoot, 'components'))) {
    const parent = join(projectRoot, '..');
    if (parent === projectRoot) break;
    projectRoot = parent;
  }
  
  // List versions for this specific component
  const componentDir = join(projectRoot, 'components', componentName);
  const entries = readdirSync(componentDir);
  const versions: string[] = ['latest', 'dev', 'test', 'prod'];
  
  for (const entry of entries) {
    if (entry.match(/^\d+\.\d+\.\d+\.\d+$/)) {
      versions.push(entry);
    }
  }
  
  // Sort: semantic links first, then versions descending
  return versions.sort((a, b) => {
    const semanticOrder = ['latest', 'prod', 'test', 'dev'];
    const aIdx = semanticOrder.indexOf(a);
    const bIdx = semanticOrder.indexOf(b);
    
    if (aIdx >= 0 && bIdx >= 0) return aIdx - bIdx;
    if (aIdx >= 0) return -1;
    if (bIdx >= 0) return 1;
    
    return b.localeCompare(a, undefined, { numeric: true });
  });
}
```

**Key Innovation:**
- Methods defined in **DefaultCLI** are inherited by all component CLIs
- Context args passed from bash: `['on', 'Unit']`
- Extract component from `currentArgs[1]` to provide context-aware completions
- Location-resilient: finds project root automatically

### 🎯 Adding Your Own Completions

#### **For Common Parameters (All Components):**
Add to `DefaultCLI.ts`:
```typescript
/**
 * Tab completion for format parameter
 * @cliHide
 */
async formatParameterCompletion(currentArgs: string[]): Promise<string[]> {
  return ['json', 'yaml', 'table', 'tree'];
}
```

#### **For Component-Specific Parameters:**
Add to `YourComponentCLI.ts`:
```typescript
/**
 * Tab completion for action parameter of 'links' command
 * @cliHide
 */
async actionParameterCompletion(currentArgs: string[]): Promise<string[]> {
  return ['fix', 'verify', 'list'];
}
```

**Naming Convention (CRITICAL):**
- Parameter name: `depth` → Completion method: `depthParameterCompletion`
- Parameter name: `component` → Completion method: `componentParameterCompletion`
- Parameter name: `myCustomParam` → Completion method: `myCustomParamParameterCompletion`

### 🎭 The Complete Architecture Map

```
┌─────────────────────────────────────────────────────────────────┐
│                        USER TYPES IN BASH                       │
│              web4tscomponent on Unit 0.3.2.0 tre<Tab>          │
└────────────────────────┬────────────────────────────────────────┘
                         │
                         ↓
┌─────────────────────────────────────────────────────────────────┐
│              BASH COMPLETION (source.env)                       │
│  • Captures: COMP_WORDS=[web4tscomponent, on, Unit, 0.3.2.0, tre]│
│  • Extracts: args=[on, Unit, 0.3.2.0, tre]                     │
│  • Injects: className=Web4TSComponentCLI,DefaultWeb4TSComponent│
│  • Calls: TSCompletion with [className, ...args]               │
└────────────────────────┬────────────────────────────────────────┘
                         │
                         ↓
┌─────────────────────────────────────────────────────────────────┐
│            TSCOMPLETION (TypeScript AST Parser)                 │
│  • Receives: [Web4TSComponentCLI,DefaultWeb4TSComponent,        │
│               on, Unit, 0.3.2.0, tre]                          │
│  • Scans: Web4TSComponentCLI.ts → finds 'extends DefaultCLI'   │
│  • Discovers: DefaultCLI methods (componentParameterCompletion,│
│               versionParameterCompletion, etc.)                 │
│  • Analyzes: args.length=5, method 'on' has 2 params           │
│  • Determines: paramIndex=2 >= params.length → CHAINING!       │
│  • Returns: ['tree', 'test', 'transform', ...] (methods        │
│             starting with 'tre')                                │
└────────────────────────┬────────────────────────────────────────┘
                         │
                         ↓
┌─────────────────────────────────────────────────────────────────┐
│                    BASH DISPLAYS RESULTS                        │
│                      tree                                       │
└─────────────────────────────────────────────────────────────────┘
```

### 🎪 Alternative Flow: Callback Path

```
USER: web4tscomponent on <Tab>
  ↓
BASH: calls TSCompletion with [Web4TSComponentCLI,DefaultWeb4TSComponent, on, '']
  ↓
TSCOMPLETION: 
  • args.length=3 → completing 1st parameter
  • Gets params=['component', 'version']
  • Checks: componentParameterCompletion exists? YES!
  • Returns: __CALLBACK__:componentParameterCompletion
  ↓
BASH: detects __CALLBACK__:componentParameterCompletion
      calls: web4tscomponent completeParameter componentParameterCompletion on
  ↓
DEFAULTCLI.completeParameter():
  • Receives: callbackName='componentParameterCompletion', contextArgs=['on']
  • Calls: this.componentParameterCompletion(['on'])
  ↓
DEFAULTCLI.componentParameterCompletion():
  • Context: ['on'] (could extract if needed)
  • Lists: all directories in components/
  • Returns: ['Build', 'DefaultCLI', 'Unit', 'Web4TSComponent', ...]
  ↓
BASH: displays all components for user to choose
```

### 💎 Why This Is Beautiful

1. **Zero Maintenance** - Add a method to your class, it's automatically in tab completion
2. **Inheritance Just Works** - Common completions in DefaultCLI, component-specific in YourComponentCLI
3. **Context-Aware** - Version completion knows which component you selected
4. **Seamless Chaining** - Switches automatically between parameters and methods
5. **TypeScript-First** - Everything derived from actual TypeScript code, not config files
6. **Location Resilient** - Works from any directory in the project
7. **DRY Compliant** - Single source of truth: your TypeScript class definitions

### 🎓 Key Takeaways

- **Never hardcode completion lists** - Use TSCompletion to discover from AST
- **Parameter name = completion method** - `depth` → `depthParameterCompletion`
- **Use @cliHide** - Hide completion methods from CLI help
- **Context passing works** - Completion methods receive all previous args
- **Inheritance is automatic** - `Web4TSComponentCLI extends DefaultCLI` = all methods inherited
- **Multi-parameter support** - 1st, 2nd, 3rd, nth parameters all work
- **Chaining is seamless** - After last parameter, methods complete again

**This is what CMM4 looks like. This is simplexity. This is Web4.** 🎯

---

## 📚 Adding Methods to Components (The Safe Way)

### 🚨 CRITICAL: Don't Break Anything!

**New agents often try complex approaches and break everything. Here's the SIMPLE way:**

### Your Job is SIMPLE:

1. Add method to `DefaultWeb4TSComponent.ts`
2. Add 3 lines of TSDoc comments
3. That's it! CLI discovers it automatically

### Step 1: Add Method to Component (Only Place You Edit!)

Open: `src/ts/layer2/DefaultWeb4TSComponent.ts`

Add your method anywhere in the class:

```typescript
/**
 * Your new awesome feature
 * @param inputData Data to process
 * @param outputFormat Format for output (json, xml, csv)
 * @cliSyntax inputData outputFormat
 * @cliDefault outputFormat json
 */
async myAwesomeFeature(inputData: string, outputFormat: string = 'json'): Promise<this> {
  console.log(`🚀 Processing ${inputData} as ${outputFormat}`);
  
  // Your implementation here
  console.log(`✅ Awesome feature completed!`);
  
  return this; // Enable method chaining
}
```

### Step 2: Test It (Watch the Magic!)

```bash
# Just start the component (auto-build happens)
npm start

# Or use the wrapper
./web4tscomponent | grep myAwesome

# Use your method
./web4tscomponent myAwesomeFeature "test data" json
```

### Step 3: That's It! (Seriously!)

**No other files to edit:**
- ❌ Don't touch the CLI file
- ❌ Don't add switch cases
- ❌ Don't update help text
- ❌ Don't configure anything

**It's automatically discovered and available!**

---

## 🎯 TSDoc Magic (The 3 Lines That Make It Work)

### Required TSDoc Comments:

```typescript
/**
 * Human description of what the method does
 * @param paramName Description of parameter
 * @cliSyntax paramName anotherParam
 * @cliDefault paramName defaultValue
 * @cliHide  // Use this to hide internal methods
 */
```

### TSDoc Annotations Explained:

**`@cliSyntax paramName anotherParam`**
- Tells CLI what parameters to expect
- Generates: `myMethod <paramName> <anotherParam>`
- **Required for CLI discovery**

**`@cliDefault paramName defaultValue`**
- Sets default values for parameters
- Generates: `<paramName=defaultValue>` in help
- Makes parameters optional

**`@cliHide`**
- Hides method from CLI (for internal methods)
- Method exists but won't show in help

### Parameter Types That Work:

```typescript
// ✅ Simple parameters (recommended)
async myMethod(name: string, version: string): Promise<this>

// ✅ Optional parameters with defaults
async myMethod(name: string, options: string = 'default'): Promise<this>

// ✅ Return this for method chaining
return this; // Enables: component.method1().method2()
```

---

## ⚠️ Common New Agent Mistakes (Don't Do These!)

### ❌ Mistake 1: Editing the CLI File

```typescript
// ❌ DON'T DO THIS:
// Editing Web4TSComponentCLI.ts to add switch cases
switch (command) {
  case 'myNewMethod':  // ← DON'T ADD THESE!
    await this.myNewMethod();
    break;
}
```

**✅ CORRECT:** Just add method to DefaultWeb4TSComponent - CLI finds it automatically!

### ❌ Mistake 2: Complex Parameter Patterns

```typescript
// ❌ DON'T DO THIS:
async myMethod(options: { name: string, config: Config, flags: string[] }): Promise<void>
```

**✅ CORRECT:** Use simple parameters:
```typescript
async myMethod(name: string, config: string, flags: string): Promise<this>
```

### ❌ Mistake 3: Forgetting TSDoc

```typescript
// ❌ DON'T DO THIS:
async myMethod(param: string): Promise<void> {
  // No TSDoc comments
}
```

**✅ CORRECT:** Always add TSDoc:
```typescript
/**
 * Description of method
 * @param param Description of parameter
 * @cliSyntax param
 */
async myMethod(param: string): Promise<this>
```

### ❌ Mistake 4: Not Returning `this`

```typescript
// ❌ DON'T DO THIS:
async myMethod(): Promise<void> {
  // Can't chain methods
}
```

**✅ CORRECT:** Return this for chaining:
```typescript
async myMethod(): Promise<this> {
  return this; // Enables method chaining
}
```

---

## 🎯 Context-Aware Methods (Advanced Pattern)

### When Your Method Needs Component Context:

Some methods work on a specific component (like upgrade, optimize, analyze). Use this pattern:

```typescript
/**
 * Your context-aware method
 * @param parameter Your parameter
 * @cliSyntax parameter
 */
async myContextMethod(parameter: string): Promise<this> {
  // Get component context (set by 'on' command)
  const context = this.getComponentContext();
  if (!context) {
    throw new Error('I need a component context first. Please use "on <component> <version>" before running this method.');
  }
  
  console.log(`🔧 Working on ${context.component} v${context.version}`);
  console.log(`   Path: ${context.path}`);
  
  // Your logic here using context.component, context.version, context.path
  
  return this;
}
```

**Usage:**
```bash
./web4tscomponent on MyComponent 0.1.0.0 myContextMethod "parameter"
```

---

## 📋 Method Addition Checklist (Copy This!)

### Before You Start:
- [ ] I understand I only edit DefaultWeb4TSComponent.ts
- [ ] I won't touch the CLI files
- [ ] I'll use simple parameters
- [ ] I'll add proper TSDoc comments

### Adding the Method:
- [ ] Open `src/ts/layer2/DefaultWeb4TSComponent.ts`
- [ ] Add method with TSDoc comments
- [ ] Use `@cliSyntax` for parameters
- [ ] Return `this` for chaining
- [ ] Keep parameters simple (strings, not objects)

### Testing:
- [ ] Run `npm start` to see method in help
- [ ] Test method: `./web4tscomponent myMethod param1 param2`
- [ ] Verify method chaining works if needed
- [ ] Check that nothing broke

### If Something Breaks:
- [ ] Check TSDoc syntax (missing @cliSyntax?)
- [ ] Check parameter types (too complex?)
- [ ] Check return type (should be Promise<this>)
- [ ] **Don't edit CLI files to "fix" it!**

---

## 🎯 Real-World Examples (Copy These Patterns!)

### Example 1: Simple Data Processing

```typescript
/**
 * Process component data with transformation
 * @param inputFile Path to input file
 * @param outputFormat Output format (json, xml, csv)
 * @cliSyntax inputFile outputFormat
 * @cliDefault outputFormat json
 */
async processData(inputFile: string, outputFormat: string = 'json'): Promise<this> {
  console.log(`🔄 Processing ${inputFile} as ${outputFormat}`);
  
  // Your processing logic here
  
  console.log(`✅ Data processing completed`);
  return this;
}
```

**Usage:** `./web4tscomponent processData myfile.txt xml`

### Example 2: Component Analysis

```typescript
/**
 * Analyze component for quality metrics
 * @param componentPath Path to component directory
 * @cliSyntax componentPath
 */
async analyzeQuality(componentPath: string): Promise<this> {
  console.log(`📊 Analyzing quality: ${componentPath}`);
  
  // Your analysis logic here
  
  console.log(`✅ Quality analysis completed`);
  return this;
}
```

**Usage:** `./web4tscomponent analyzeQuality components/MyComponent/0.1.0.0`

### Example 3: Method Chaining Support

```typescript
/**
 * Optimize component performance
 * @param level Optimization level (basic, advanced, extreme)
 * @cliSyntax level
 * @cliDefault level basic
 */
async optimize(level: string = 'basic'): Promise<this> {
  const context = this.getComponentContext();
  if (!context) {
    throw new Error('I need a component context first. Please use "on <component> <version>" before optimizing.');
  }
  
  console.log(`⚡ Optimizing ${context.component} at ${level} level`);
  
  // Your optimization logic here
  
  console.log(`✅ Optimization completed`);
  return this;
}
```

**Usage:** `./web4tscomponent on MyComponent 0.1.0.0 optimize advanced`

### Example 4: Complete Method with Context

```typescript
/**
 * Validate component structure and dependencies
 * @param checkLevel Validation level (basic, thorough, strict)
 * @param fixIssues Whether to fix found issues automatically
 * @cliSyntax checkLevel fixIssues
 * @cliDefault checkLevel basic
 * @cliDefault fixIssues false
 */
async validateStructure(checkLevel: string = 'basic', fixIssues: string = 'false'): Promise<this> {
  const context = this.getComponentContext();
  if (!context) {
    throw new Error('I need a component context first. Please use "on <component> <version>" before validating.');
  }
  
  console.log(`🔍 Validating ${context.component} structure at ${checkLevel} level`);
  
  // Your validation logic here
  const shouldFix = fixIssues === 'true';
  if (shouldFix) {
    console.log(`🔧 Fixing issues automatically`);
    // Fix logic here
  }
  
  console.log(`✅ Structure validation completed`);
  return this;
}
```

**Usage:**
```bash
# Basic validation
./web4tscomponent on MyComponent 0.1.0.0 validateStructure

# Thorough validation with auto-fix
./web4tscomponent on MyComponent 0.1.0.0 validateStructure thorough true

# Chain with other operations
./web4tscomponent on MyComponent 0.1.0.0 validateStructure basic false upgrade nextBuild
```

---

## 🔧 Troubleshooting (When Things Don't Work)

### Method Not Appearing in CLI?

```typescript
// Check these:
// 1. Method is public (not private)
// 2. Has @cliSyntax annotation
// 3. Proper TypeScript syntax
// 4. Component compiles without errors

// Common fix:
/**
 * @cliSyntax param1 param2  // ← Add this if missing
 */
async myMethod(param1: string, param2: string): Promise<this>
```

### Method Throws Errors?

```typescript
// Check these:
// 1. Parameter count matches @cliSyntax
// 2. Default values match @cliDefault
// 3. Return type is Promise<this>
// 4. Human-readable error messages

// Common fix:
async myMethod(param: string = 'default'): Promise<this> {  // ← Add default
  return this;  // ← Add return
}
```

### Method Chaining Not Working?

```typescript
// Check these:
// 1. Method returns Promise<this>
// 2. Uses getComponentContext() for context-aware operations
// 3. Loads context with 'on' command first

// Common fix:
const context = this.getComponentContext();
if (!context) {
  throw new Error('I need a component context first. Please use "on <component> <version>" before this method.');
}
```

### Component Won't Build?

```bash
# Force rebuild with clean
npm run clean
npm run build

# Or use force build flag
./src/sh/build.sh force
```

---

## 🧪 How to Test Web4TSComponent 0.3.3.2

### Simple Test Command:

```bash
cd /Users/Shared/Workspaces/temp/Web4Articles/components/Web4TSComponent/0.3.5.1

# Just run npm test - that's it!
npm test

# DO NOT filter output with 2>&1, grep, tail, etc.
# Let the test output flow naturally - we built in all the redirections!
```

### What Happens When You Test:

1. **Smart Build** - Automatically rebuilds only if source files changed
2. **Run Vitest** - Executes comprehensive test suites (sequential, not parallel)
3. **Test Logging** - Output automatically saved to `test/logs/test-YYYYMMDD-HHMMSS.log`
4. **Verify DRY Compliance** - Ensures no node_modules duplication
5. **Test Success Verification** - Checks for 100% test pass rate
6. **Automatic Promotion** - If 100% success, triggers version promotion workflow

**⚠️ CRITICAL: Never filter test output!**
- ❌ DON'T: `npm test 2>&1 | tail -100` (makes you blind to test failures)
- ❌ DON'T: `npm test | grep something` (hides important context)
- ✅ DO: Just `npm test` - all output is already logged to `test/logs/`

### 🎯 Selective Test Execution (New Feature!)

**Problem:** Running all 172 tests takes 214+ seconds. When debugging one failing test, waiting through 144 passing tests is inefficient.

**Solution:** Run specific test files, describe blocks, or individual test cases using numeric selection with tab completion.

#### 🚀 Quick Examples:

**List all test files:**
```bash
web4tscomponent test file
# Output:
#   1:web4tscomponent.dirtpig-detection.test.ts
#   2:web4tscomponent.full-workflow.test.ts
#   3:web4tscomponent.tab-completion.test.ts
#   ...
```

**Run specific test file (by number):**
```bash
web4tscomponent test file 2
# Runs ONLY file #2 in < 1 second! 🚀
```

**List describe blocks in a file:**
```bash
web4tscomponent test describe 2
# Output:
#   1:🧽 Dirtpig Detection Tests
#   2:🚨 DIRTPIG ALARM
#   ...
```

**Run specific describe block:**
```bash
web4tscomponent test describe 2 1
# Runs only "🧽 Dirtpig Detection Tests"
```

**List test cases in a describe:**
```bash
web4tscomponent test itCase 2 1
# Output:
#   1:Should detect test component contamination
#   2:Should detect broken symlinks
#   3:Should maintain stable component count
#   ...
```

**Run specific test case:**
```bash
web4tscomponent test itCase 2 1 3
# Runs ONLY "Should maintain stable component count"
```

#### ⚡ Performance Comparison:

- **Full test suite:** `npm test` → 214 seconds (all 172 tests)
- **Single file:** `web4tscomponent test file 2` → <1 second ⚡
- **Single test case:** `web4tscomponent test itCase 2 1 3` → <500ms ⚡⚡⚡

#### 📋 Workflow for Debugging:

1. **Run full suite once** to identify failing tests
   ```bash
   npm test
   ```

2. **Run only failing test** to iterate quickly
   ```bash
   web4tscomponent test file 5  # dirtpig test
   ```

3. **Fix the issue** and test again (< 1 second feedback!)
   
4. **Run full suite** to verify nothing broke
   ```bash
   npm test
   ```

#### 💡 NPM Scripts:

The package.json also includes convenience scripts:
```bash
npm run test:bail      # Stop on first failure
npm run test:file      # Run specific file: npm run test:file test/mytest.test.ts
npm run test:watch     # Watch mode (NOT allowed in CI)
npm run test:coverage  # With coverage report
```

---

### 🔧 Testing Generated Components (DemoComponent, etc.)

Generated components have **two ways** to run tests:

**Option 1: Simple Testing (no promotion) ← DEFAULT**
```bash
cd components/DemoComponent
npm test  # Runs vitest directly, no version promotion
```
- ✅ Fast iteration during development
- ✅ No setup required
- ❌ No automatic version promotion

**Option 2: Testing with Promotion Workflow**
```bash
# REQUIRED: Source the environment first
source source.env

# Set up semantic links
web4tscomponent on DemoComponent 0.1.0.0
web4tscomponent setDev 0.1.0.0

# Run with promotion workflow
web4tscomponent on DemoComponent dev test
```
- ✅ Automatic version promotion on 100% success
- ✅ Uses Web4TSComponent's proven promotion infrastructure
- ⚠️  Requires manual setup (semantic links)

**Why Two Modes?**
1. **`npm test`** is for rapid development - run tests quickly without promotion overhead
2. **`web4tscomponent on Component dev test`** is for release preparation - validates 100% success and promotes versions

**Important:** Generated components do NOT auto-promote on `npm test` by design. This prevents accidental promotions during development. Use the Web4TSComponent promotion workflow when you're ready to release.

---

## 🎉 What Happens on 100% Test Success?

When tests achieve **100% success**, Web4TSComponent triggers an **automatic version promotion workflow**. This is a CMM4 feedback loop system that systematically promotes versions through the development lifecycle.

### Automatic Version Promotion Workflow:

```
🎯 Starting Point: Version 0.3.3.2 (test version)
        ⬇️
🔧 Step 1: Create nextPatch
        → Increment patch: 0.3.3.2 → 0.3.4.0
        → Reset build number to 0
        ⬇️
🚀 Step 2: Promote to Production
        → Set prod symlink → 0.3.4.0
        → This version is now production-ready
        ⬇️
📦 Step 3: Update Latest
        → Set latest symlink → 0.3.4.0
        → Stable release for consumers
        ⬇️
🔧 Step 4: Create Next Development Version
        → Create nextBuild: 0.3.4.1
        → Ready for next development cycle
        ⬇️
🚧 Step 5: Set Development Workflow
        → Set dev symlink → 0.3.4.1
        → Set test symlink → 0.3.4.1
        → Continue development immediately
```

### Final State After 100% Test Success:

```
🚀 prod:   0.3.4.0  (promoted from tested version)
📦 latest: 0.3.4.0  (stable release)
🧪 test:   0.3.4.1  (ready for next test cycle)
🚧 dev:    0.3.4.1  (active development continues)
```

### Workflow Safety Features:

- ✅ **Prevents Double Promotion** - Won't promote if version is already prod
- ✅ **Verification Check** - Confirms 100% test success before promotion
- ✅ **Atomic Operations** - Each step completes before next begins
- ✅ **Clear Status Messages** - Always know what's happening
- ✅ **Error Recovery** - Manual intervention possible if needed

### PDCA Integration:

This workflow implements **PDCA (Plan-Do-Check-Act)** at CMM4 level:

- **Plan:** Develop features on dev version
- **Do:** Execute implementation and testing
- **Check:** Run comprehensive test suite (this step)
- **Act:** Automatic promotion on success, iteration on failure

---

## 🆕 What's New in Version 0.3.3.2?

### DRY Compliance Test Suite

Version 0.3.3.2 introduces comprehensive **DRY (Don't Repeat Yourself) Principle enforcement** through automated testing:

#### New Test: `web4tscomponent.dry-compliance.test.ts`

This test suite prevents "junior hacking" behavior by enforcing:

1. **Symlinked node_modules Verification**
   - Ensures components use symlinks, NOT real directories
   - Detects DRY violations (duplicated dependencies)
   - Verifies only ONE global node_modules at project root

2. **Template Validation**
   - Validates `install-deps.sh` has correct order
   - Ensures `npm install` runs BEFORE symlink creation
   - Checks for global node_modules verification logic

3. **Multiple Component Compliance**
   - Tests that multiple components share dependencies
   - Verifies no dependency duplication across components
   - Confirms economic efficiency (storage and build time)

#### Why This Matters:

**Problem:** Previous agents would break the DRY principle by creating real node_modules directories in components, causing:
- Massive disk space waste (GB per component)
- Slower builds (duplicate npm installs)
- Inconsistent dependency versions
- CMM1 chaos instead of CMM3+ systematic approach

**Solution:** Automated detection and prevention through test suite that fails if DRY violations exist.

---

## 🧪 Comprehensive Test Suites

Version 0.3.3.2 includes **12 test suites** with sequential execution (prevents race conditions):

### Test Suite Breakdown:

| # | Test Suite | Purpose | Status |
|---|------------|---------|--------|
| 1 | `web4tscomponent.functionality.test.ts` | Component creation, versioning, upgrades | ✅ Core |
| 2 | `web4tscomponent.command-chaining.test.ts` | Method chaining, context loading | ✅ Core |
| 3 | `web4tscomponent.context-pattern.test.ts` | Context-aware operations | ✅ Core |
| 4 | `web4tscomponent.dry-compliance.test.ts` | **NEW!** DRY principle enforcement | ✅ NEW |
| 5 | `web4tscomponent.dirtpig-detection.test.ts` | Unauthorized file modification detection | ✅ Protection |
| 6 | `web4tscomponent.file-protection.test.ts` | Protected file integrity checks | ✅ Protection |
| 7 | `web4tscomponent.integration-success.test.ts` | Self-management capabilities | ✅ Integration |
| 8 | `web4tscomponent.real-usage.test.ts` | Real-world usage patterns | ✅ Validation |
| 9 | `web4tscomponent.symlink-management.test.ts` | Semantic version links (dev/test/prod) | ✅ Workflow |
| 10 | `web4tscomponent.version-display.test.ts` | Version display and formatting | ✅ Display |
| 11 | `web4tscomponent.version-promotion.test.ts` | Automatic promotion workflow | ✅ Workflow |
| 12 | `web4tscomponent.working-demo.test.ts` | Working demonstrations | ✅ Demo |

### Test Configuration:

```typescript
// vitest.config.ts - Ensures reliable test execution
{
  pool: 'forks',
  poolOptions: {
    forks: {
      singleFork: true  // Sequential execution prevents race conditions
    }
  },
  fileParallelism: false,
  maxConcurrency: 1
}
```

### Test Isolation Strategy:

- **ProjectRootMocker** - Redirects `process.cwd()` to `test/data` directory
- **beforeEach** - Clean test environment for each test
- **afterEach** - Clean up test data after each test
- **No Production Impact** - Tests never touch production components

---

## 🔄 Development Workflow Reminder

Web4TSComponent enforces a **systematic development workflow**:

```
🔄 WORKFLOW CYCLE:

1. 🚧 Work on dev version
   → Implement features
   → Add methods
   → Fix issues

2. 🧪 Run test on dev version
   → If dev === test: auto-creates nextBuild
   → Switches context to new build
   → Runs tests

3. ✅ Tests Pass (100%):
   → Automatic version promotion
   → New prod version created
   → New dev version ready
   → Continue at step 1

4. ❌ Tests Fail:
   → Stay on test version
   → Fix issues
   → Re-run tests
   → Loop until success
```

### Never Do This:

- ❌ Work directly on prod version
- ❌ Skip testing before promotion
- ❌ Manually edit version numbers
- ❌ Create real node_modules directories
- ❌ Break the test → dev cycle
- ❌ Edit CLI files manually

### Always Do This:

- ✅ Work on dev until ready to test
- ✅ Test thoroughly before promotion
- ✅ Use automatic version promotion
- ✅ Maintain symlinked node_modules
- ✅ Follow the systematic workflow
- ✅ Use `npm start` for components

---

## 🏗️ Architecture Overview

### Component Structure:

```
Web4TSComponent/0.3.3.2/
├── src/
│   ├── ts/
│   │   ├── layer5/  Web4TSComponentCLI.ts (Entry point)
│   │   ├── layer4/  TSCompletion.ts (Completion helper)
│   │   ├── layer3/  Interfaces (contracts)
│   │   └── layer2/  DefaultWeb4TSComponent.ts (Implementation)
│   └── sh/
│       ├── build.sh (Smart build)
│       ├── test.sh (Test runner)
│       ├── install-deps.sh (DRY-compliant setup)
│       ├── start.sh (npm start handler)
│       └── ... (other lifecycle scripts)
├── test/
│   ├── data/ (Isolated test environment)
│   ├── utils/ (ProjectRootMocker)
│   └── *.test.ts (12 test suites)
├── templates/
│   ├── ts/ (TypeScript templates)
│   ├── sh/ (Shell script templates)
│   └── config/ (Configuration templates)
├── dist/ (Compiled output)
├── package.json (scripts: start, test, build, clean)
├── tsconfig.json
├── vitest.config.ts
└── README.md (This file)
```

### Layered Architecture:

- **Layer 5:** CLI entry point with command routing
- **Layer 4:** Helper utilities (completion, project root mocking)
- **Layer 3:** Interfaces and type definitions
- **Layer 2:** Implementation (DefaultWeb4TSComponent, DefaultCLI)
- **Layer 1:** (Reserved for future use)

---

## 🛡️ Web4 Compliance Principles

Web4TSComponent enforces these architectural principles:

### 1. Empty Constructor Principle

```typescript
// ✅ CORRECT
constructor() {
  this.model = { /* defaults */ };
}

// ❌ WRONG
constructor(config: Config) { }
```

### 2. Scenario Support

```typescript
// ✅ REQUIRED for all components
init(scenario: Scenario<Model>): this
async toScenario(): Promise<Scenario<Model>>
```

### 3. Human-Readable Errors

```typescript
// ✅ CORRECT
throw new Error('I couldn\'t find the component. Please check the name and version.');

// ❌ WRONG
throw new Error('ENOENT: no such file or directory');
```

### 4. Method Chaining

```typescript
// ✅ CORRECT - Return this for chaining
async myMethod(): Promise<this> {
  return this;
}
```

### 5. DRY Principle

```typescript
// ✅ CORRECT - Symlinked dependencies
ln -sf ../../../node_modules node_modules

// ❌ WRONG - Real directories duplicate dependencies
npm install  # without proper symlink setup
```

### 6. **CLI Flags Prohibition (CRITICAL Web4 Principle)**

**❌ ALL `--flags` and `-options` are STRICTLY FORBIDDEN in Web4 CLIs**

```bash
# ❌ WRONG - Web4 CLIs NEVER accept flags
web4tscomponent --help
web4tscomponent create MyComponent --cli --spec
web4tscomponent -v
web4tscomponent --version

# ✅ CORRECT - Web4 uses ONLY positional arguments
web4tscomponent
web4tscomponent create MyComponent 0.1.0.0 all
web4tscomponent version
```

**Why flags are forbidden:**
- **Simplicity**: No complex option parsing required
- **Consistency**: All Web4 components use identical CLI patterns
- **Auto-Discovery**: Method names map directly to commands
- **Tab Completion**: Positional arguments enable intelligent completion
- **Human-Readable**: Commands read like natural language
- **Method Chaining**: `component method1 param1 method2 param2` flows naturally

**Web4 CLI Philosophy:**
- **Commands are method names** (discovered automatically from TypeScript)
- **Parameters are positional** (mapped to method parameters in order)
- **No configuration required** (everything auto-discovered from code)
- **No flag parsing complexity** (just split arguments and call methods)

**If you need help:**
```bash
# ✅ CORRECT way to get help
web4tscomponent           # Shows all available methods
web4tscomponent version   # Shows version information
```

**⚠️ CRITICAL:** Any agent or developer who uses `--flags` has violated a core Web4 architectural principle and must immediately correct their approach.

---

## 🚀 Quick Reference

### The Only Command You Really Need:

```bash
npm start  # Handles everything automatically
```

### Other Useful Commands (But npm start handles them):

```bash
# These happen automatically, but you can run them manually:
npm test       # Test the component
npm run build  # Build manually
npm run clean  # Clean and rebuild

# Direct CLI usage (after build):
./web4tscomponent                              # Show help
./web4tscomponent create MyComponent 0.1.0.0 all  # Create component
./web4tscomponent on MyComponent 0.1.0.0 test  # Load context and test
./web4tscomponent on MyComponent 0.1.0.0 upgrade nextBuild test  # Chain operations
```

### Semantic Version Links:

- **dev** - Active development version (work here)
- **test** - Version ready for testing (test here)
- **prod** - Production-ready version (100% tested)
- **latest** - Latest stable release (same as prod)

---

## 🎯 Why This Works (The Web4 Magic)

### Auto-Discovery Architecture:

1. **CLI scans DefaultWeb4TSComponent** using TypeScript reflection
2. **Finds all public methods** automatically
3. **Reads TSDoc comments** for parameter information
4. **Generates help text** from your comments
5. **Routes commands** to your methods automatically

### Zero Configuration:

- No CLI configuration files
- No method registration arrays
- No hardcoded command lists
- **Just add method + TSDoc = CLI command!**

### DRY Principle:

- Write method once → available everywhere
- TSDoc comments → automatic documentation
- Method signature → automatic parameter handling
- Symlinked dependencies → no duplication
- **No repetitive code anywhere!**

### Automatic Lifecycle:

- `npm start` → builds automatically
- Dependencies → install automatically
- Symlinks → create automatically
- CLI → starts automatically
- Components created → work the same way

---

## 🎯 CMM4 Implementation

Web4TSComponent implements **CMM4 (Capability Maturity Model Level 4)**:

### CMM3 Foundation:
- ✅ **Objective Definitions** - Tests provide reproducible verification
- ✅ **Automated Execution** - No manual steps required
- ✅ **Scientific Reproducibility** - Same input → same output always

### CMM4 Achievement:
- ✅ **Feedback Loop Mastery** - PDCA cycle with automatic promotion
- ✅ **Whitebox Understanding** - Tests document system behavior
- ✅ **Systematic Improvement** - Each cycle refines the process
- ✅ **Quantitative Management** - Test metrics drive decisions

### Not CMM5:
- ❌ **Not 100% perfection** - Targets 80/20 efficiency (SpaceX model)
- ✅ **Economic viability** - Balances quality with practicality
- ✅ **Continuous improvement** - Better over time, not perfect immediately

---

## 📊 Version History & Migration Path

### Version Progression:

- **0.3.0.x** - Initial auto-discovery CLI implementation
- **0.3.1.x** - Enhanced version management
- **0.3.2.x** - Test isolation and promotion workflow
- **0.3.3.0** - Comprehensive test suites
- **0.3.3.1** - Bug fixes and stability
- **0.3.3.2** - **DRY compliance enforcement + Automatic lifecycle (current)**

### Migration from Earlier Versions:

If migrating from earlier versions:

1. Check for real node_modules directories
2. Run DRY compliance tests to identify violations
3. Remove real directories and create symlinks
4. Verify with: `npm test`
5. Use `npm start` for everything

---

## 🔗 Related Documentation

- **CMM Understanding:** `/scrum.pmo/project.journal/2025-09-22-UTC-1908-session/howto.cmm.md`
- **PDCA Process:** `/scrum.pmo/roles/_shared/PDCA/howto.PDCA.md`
- **Tech Stack:** `/docs/tech-stack.md`
- **Unit Component:** Similar auto-discovery CLI pattern

---

## 💡 For New Agents

**First Time with Web4TSComponent?**

### Start Here:

1. **Just run `npm start`** - Everything else is automatic
2. Read the **Auto-Discovery CLI** section above
3. Try adding a simple method to see the magic
4. Read the **CMM Understanding** document for context
5. Run `npm test` to see systematic verification

### Key Concepts:

- **One Command:** `npm start` handles everything
- **Auto-Discovery:** Add method → appears in CLI automatically
- **Method Chaining:** Return `this` from every method
- **TSDoc Magic:** 3 lines of comments make methods discoverable
- **DRY Compliance:** Symlinks, never duplicate node_modules
- **Systematic Process:** CMM4 feedback loops, not ad-hoc hacking

### Remember:

- This is a CMM4 system, not CMM1 chaos
- Tests define success objectively
- Automation prevents human error
- Systematic processes beat ad-hoc hacking
- **Components created work the same way!**

---

## 🎉 Success Criteria

Web4TSComponent 0.3.3.2 is successful when:

- ✅ All 12 test suites pass at 100%
- ✅ DRY compliance tests detect violations
- ✅ Automatic version promotion executes correctly
- ✅ No real node_modules directories in components
- ✅ Tests remain isolated from production
- ✅ Build process is efficient (smart rebuilds only)
- ✅ `npm start` works perfectly every time
- ✅ Created components work the same way

---

**Never 2 1 (TO ONE). Always 4 2 (FOR TWO).** 🤝✨

**Web4TSComponent 0.3.17.3** - Path Authority & Context Initialization Complete 🚀